--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+::-webkit-scrollbar { width: 0;}
+
 body {
     font-family: 'Space Grotesk', sans-serif;
     background-color: rgba(252, 247, 230, 1);
